--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -1737,7 +1737,7 @@ pre code {
 }
 
 .table .thead-light th {
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #eaecf4;
   border-color: #e3e6f0;
 }
@@ -1833,7 +1833,7 @@ pre code {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #d1d3e2;
@@ -1854,11 +1854,11 @@ pre code {
 
 .form-control:-moz-focusring {
   color: transparent;
-  text-shadow: 0 0 0 #6e707e;
+  text-shadow: 0 0 0 #3C3C3C;
 }
 
 .form-control:focus {
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #fff;
   border-color: #bac8f3;
   outline: 0;
@@ -1890,7 +1890,7 @@ input[type="month"].form-control {
 }
 
 select.form-control:focus::-ms-value {
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #fff;
 }
 
@@ -3456,7 +3456,7 @@ input[type="button"].btn-block {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #6e707e;
+  color: #3C3C3C;
   text-align: center;
   white-space: nowrap;
   background-color: #eaecf4;
@@ -3693,7 +3693,7 @@ input[type="button"].btn-block {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #6e707e;
+  color: #3C3C3C;
   vertical-align: middle;
   background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center/8px 10px no-repeat;
   border: 1px solid #d1d3e2;
@@ -3710,7 +3710,7 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus::-ms-value {
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #fff;
 }
 
@@ -3731,7 +3731,7 @@ input[type="button"].btn-block {
 
 .custom-select:-moz-focusring {
   color: transparent;
-  text-shadow: 0 0 0 #6e707e;
+  text-shadow: 0 0 0 #3C3C3C;
 }
 
 .custom-select-sm {
@@ -3797,7 +3797,7 @@ input[type="button"].btn-block {
   overflow: hidden;
   font-weight: 400;
   line-height: 1.5;
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #fff;
   border: 1px solid #d1d3e2;
   border-radius: 0.35rem;
@@ -3813,7 +3813,7 @@ input[type="button"].btn-block {
   height: calc(1.5em + 0.75rem);
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
-  color: #6e707e;
+  color: #3C3C3C;
   content: "Browse";
   background-color: #eaecf4;
   border-left: inherit;
@@ -4043,7 +4043,7 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #6e707e;
+  color: #3C3C3C;
   background-color: #fff;
   border-color: #dddfeb #dddfeb #fff;
 }
@@ -5212,13 +5212,13 @@ a.badge-dark:focus, a.badge-dark.focus {
 
 .list-group-item-action {
   width: 100%;
-  color: #6e707e;
+  color: #3C3C3C;
   text-align: inherit;
 }
 
 .list-group-item-action:hover, .list-group-item-action:focus {
   z-index: 1;
-  color: #6e707e;
+  color: #3C3C3C;
   text-decoration: none;
   background-color: #f8f9fc;
 }
@@ -9892,7 +9892,7 @@ a:focus {
 }
 
 .bg-gray-700 {
-  background-color: #6e707e !important;
+  background-color: #3C3C3C !important;
 }
 
 .bg-gray-800 {
@@ -9940,7 +9940,7 @@ a:focus {
 }
 
 .text-gray-700 {
-  color: #6e707e !important;
+  color: #3C3C3C !important;
 }
 
 .text-gray-800 {
@@ -10542,7 +10542,7 @@ a:focus {
 }
 
 .sidebar-light .sidebar-brand {
-  color: #6e707e;
+  color: #3C3C3C;
 }
 
 .sidebar-light hr.sidebar-divider {
@@ -10562,11 +10562,11 @@ a:focus {
 }
 
 .sidebar-light .nav-item .nav-link:active, .sidebar-light .nav-item .nav-link:focus, .sidebar-light .nav-item .nav-link:hover {
-  color: #6e707e;
+  color: #3C3C3C;
 }
 
 .sidebar-light .nav-item .nav-link:active i, .sidebar-light .nav-item .nav-link:focus i, .sidebar-light .nav-item .nav-link:hover i {
-  color: #6e707e;
+  color: #3C3C3C;
 }
 
 .sidebar-light .nav-item .nav-link[data-toggle="collapse"]::after {
@@ -10574,11 +10574,11 @@ a:focus {
 }
 
 .sidebar-light .nav-item.active .nav-link {
-  color: #6e707e;
+  color: #3C3C3C;
 }
 
 .sidebar-light .nav-item.active .nav-link i {
-  color: #6e707e;
+  color: #3C3C3C;
 }
 
 .sidebar-light #sidebarToggle {
